@@ -1,5 +1,8 @@
 Revision history for MooX::Aliases
 
+  - name alias methods to avoid them getting autocleaned or detected by
+    Test::CleanNamespaces (RT#101814)
+
 0.001005 - 2015-01-06
   - fix +attribute overrides
   - fix multi-attribute definitions
